--- a/src/style/inputs.scss
+++ b/src/style/inputs.scss
@@ -7,6 +7,11 @@
   bottom: 0;
   z-index: 1;
   background-color: #fff;
+
+  &.is-disabled {
+    opacity: .5;
+    pointer-events: none;
+  }
 }
 
 .inputs__separator {
