--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,7 +1,6 @@
 .header {
   position: fixed;
   top: 10px; 
-  left: 10px;
   z-index: 10;
   color: $c-accent;
   width: 100%;
@@ -15,4 +14,8 @@
   cursor: pointer;
   display: inline-block;
   margin: 0 5px;
+
+  &:hover {
+    font-weight: 600;
+  }
 }
