--- a/src/style/info.scss
+++ b/src/style/info.scss
@@ -4,11 +4,15 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, .95);
+  background-color: rgba($c-background, .95);
   z-index: 999;
   overflow: scroll;
   font-size: 20px;
   line-height: 1.55em;
+
+  @include respond-to('small') {
+    font-size: 16px;
+  }
 }
 
 .info__inner {
