--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -1,6 +1,40 @@
 .intro {
-  padding: $body-padding;
 }
 
 .intro-step {
+}
+
+.intro__title {
+  margin: 0 auto 40px auto;
+  max-width: 65%;
+
+  @include respond-to('small') {
+    max-width: 80%;
+  }
+}
+
+.intro__title-text {
+  font-family: 'Press Start 2P', cursive;
+  //filter: url(#filter);
+  color: white;
+  color: #fdcc18;
+  text-align: center;
+  line-height: 1.25em;
+  font-size: 55px;
+
+  @include respond-to('medium') {
+    font-size: 42px;
+  }
+
+  @include respond-to('small') {
+    font-size: 30px;
+  }
+
+  @include respond-to('mini') {
+    font-size: 24px;
+  }
+}
+
+.intro__title-letter {
+  filter: url(#filter);
 }
